1.1.0 update
- bump JDK 17 -> 21
- follow IDEA suggestions for small changes
- update libraries
- change LICENSE to GPLv2 to respect fxml libraries